src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>BA_Baker_Hill_Score_100__c</fullName>
        <description>changed from &lt;90 to &lt;100 per Quinn</description>
        <label>Baker Hill Score &lt; 100</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BA_Business_Alert_Count__c</fullName>
        <formula>if(ZIP_Alert__c = &quot;Yes&quot;, 1, 0) + 
if(BA_Is_the_business_type_considered_Luxur__c = &quot;Yes&quot;, 1, 0) +
if(ispickval( BA_Split_is_40__c  , &quot;Yes&quot;), 1, 0) +
if(ispickval( BA_X2_years_in_business__c , &quot;Yes&quot;), 1, 0) +
if(ispickval( BA_I_year_with_current_processor__c  , &quot;Yes&quot;), 1, 0) +
if(ispickval( BA_X9_months_remaining_on_the_lease__c  , &quot;Yes&quot;), 1, 0) +
if(ispickval( BA_Business_is_a_sole_proprietor__c   , &quot;Yes&quot;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Alert Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BA_Business_is_a_sole_proprietor__c</fullName>
        <label>Business is a sole proprietor</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BA_Charge_back_rate_1__c</fullName>
        <label>Charge-back rate &gt;1%</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BA_FICO_score_500__c</fullName>
        <label>FICO score &lt; 500</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BA_I_year_with_current_processor__c</fullName>
        <label>&lt; I year with current processor</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BA_Is_the_business_type_considered_Luxur__c</fullName>
        <formula>if(ispickval(Business_Category__c,&quot;&quot;),&quot;&quot;,if(or(ispickval(Business_Category__c,&quot;Computer-Related Retail&quot;),
ispickval(Business_Category__c,&quot;Consumer Electronics&quot;),
ispickval(Business_Category__c,&quot;Furniture&quot;),
ispickval(Business_Category__c,&quot;Golf - Stores, Driving Ranges, Country Clubs&quot;),
ispickval(Business_Category__c,&quot;Health Club&quot;),
ispickval(Business_Category__c,&quot;Housing-Related&quot;),
ispickval(Business_Category__c,&quot;Jewelry&quot;),
ispickval(Business_Category__c,&quot;Limosine &amp; Transportation&quot;),
ispickval(Business_Category__c,&quot;Restaurant - Fine Dining&quot;),
ispickval(Business_Category__c,&quot;Maid and Cleaning Service&quot;),
ispickval(Business_Category__c,&quot;Music and Music Instrument&quot;),
ispickval(Business_Category__c,&quot;Tanning and Tattoo&quot;),
ispickval(Business_Category__c,&quot;Other Service Retail&quot;),
ispickval(Business_Category__c,&quot;Other Product Retail&quot;),
ispickval(Business_Category__c,&quot;Promotions &amp; Advertising&quot;),
ispickval(Business_Category__c,&quot;Automotive - Transmission&quot;)),&quot;Yes&quot;,&quot;No&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is the business type considered Luxury?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BA_Split_is_40__c</fullName>
        <label>Split is &gt;= 40%</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BA_X2_years_in_business__c</fullName>
        <label>&lt; 2 years in business</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BA_X2_years_of_credit_history__c</fullName>
        <label>&lt; 2 years of credit history</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BA_X9_months_remaining_on_the_lease__c</fullName>
        <label>&lt; 9 months remaining on the lease</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BK_statmnt_less_than_gross_sales_on_app__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BK statmnt less than gross sales on app</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>B__c</fullName>
        <label>Business ZIP</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bad_Zip_Pool__c</fullName>
        <defaultValue>&quot;010, 	021, 	030, 	032, 	056, 	060, 	061, 	062, 	064, 	070, 	075, 	076, 	077, 	080, 	086, 	087, 	100, 	104, 	112, 	115, 	117, 	120, 	140, 	144, 	152, 	178, 	189, 	190, 	191, 	200, 	207, 	208, 	212, 	229, 	279, 	284, 	286, 	294, 	295, 	299, 	300, 	301, 	302, 	302, 	303, 	305, 	311, 	322, 	326, 	329, 	334, 	335, 	336, 	337, 	338, 	339, 	342, 	346, 	347, 	350, 	351, 	352, 	360, 	380, 	381, 	383, 	399, 	402, 	440, 	441, 	442, 	444, 	447, 	450, 	451, 	452, 	461, 	462, 	465, 	468, 	481, 	483, 	530, 	545, 	548, 	551, 	553, 	554, 	555, 	600, 	601, 	601, 	604, 	605, 	606, 	611, 	630, 	631, 	650, 	656, 	658, 	704, 	743, 	750, 	750, 	751, 	752, 	753, 	754, 	756, 	757, 	760, 	760, 	761, 	761, 	762, 	765, 	766, 	767, 	770, 	772, 	773, 	774, 	775, 	782, 	786, 	786, 	787, 	787, 	800, 	801, 	802, 	804, 	805, 	806, 	807, 	840, 	850, 	852, 	853, 	853, 	890, 	891, 	900, 	901, 	902, 	902, 	903, 	906, 	907, 	908, 	910, 	911, 	912, 	913, 	913, 	914, 	915, 	916, 	917, 	918, 	919, 	920, 	921, 	922, 	923, 	925, 	926, 	928, 	930, 	932, 935, 	936, 	939, 	945, 	946, 	947, 	950, 	951, 	953, 	960, 	961, 	973, 	981,  982, 	985&quot;</defaultValue>
        <label>Bad Zip Pool</label>
        <length>1300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Baker_flag__c</fullName>
        <formula>IF( ISNULL( Data_Entry_Date__c ) , 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Baker flag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BankInfo_Date_and_time_confirmed__c</fullName>
        <label>Date and time confirmed:</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bank_Statement_LegalDBA_Voided_Check__c</fullName>
        <description>Does Legal/DBA Name on Bank Statements match Voided Check? YES OR NO
If not, then please address.</description>
        <inlineHelpText>Does Legal/DBA Name on Bank Statements match Voided Check? YES OR NO
If not, then please address.</inlineHelpText>
        <label>Bank Statement Legal/DBA Match Check?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bank_Statement_Legal_DBA_FRSA__c</fullName>
        <description>Does the Legal/DBA Name on the Bank Statements match FRSA? YES OR NO 
If not, then please address .</description>
        <inlineHelpText>Does the Legal/DBA Name on the Bank Statements match FRSA? YES OR NO 
If not, then please address .</inlineHelpText>
        <label>Bank Statement Legal/DBA Match FRSA?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bank_Statements__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bank Statements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bankruptcies__c</fullName>
        <label>Bankruptcies</label>
        <picklist>
            <picklistValues>
                <fullName>Dismissed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Petition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discharged = to or &lt; 1 yr</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Begin_Activity_Monitoring_Days_Count__c</fullName>
        <formula>(TODAY()-Begin_Activity_Monitoring_Due_Date__c)-(NOW()- Begin_Activity_Monitoring__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Begin Activity Monitoring - Days Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Begin_Activity_Monitoring_Due_Date__c</fullName>
        <label>Begin Activity Monitoring Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Begin_Activity_Monitoring_Flag__c</fullName>
        <formula>IMAGE( 
IF(AND(ISNULL( Begin_Activity_Monitoring__c  ),  Begin_Activity_Monitoring_Due_Date__c  &lt; TODAY()), &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;Priority Flag&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Begin Activity Monitoring Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Begin_Activity_Monitoring__c</fullName>
        <label>Begin Activity Monitoring</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Best_Number_To_Call__c</fullName>
        <label>Best Number To Call</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Billing_Addr_matches_Physical_Location__c</fullName>
        <label>Billing Addr. matches Physical Location?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <formula>Account.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <formula>Account.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <formula>Account.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <formula>Account.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_ZIP__c</fullName>
        <formula>Account.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing ZIP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Address__c</fullName>
        <formula>Account.BillingStreet &amp; BR() &amp;
Account.BillingCity &amp;&quot;, &quot; &amp; Account.BillingState &amp;&quot;, &quot;&amp; Account.BillingPostalCode &amp; BR() &amp;
Account.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Bank_Statements__c</fullName>
        <label>Business Bank Statements</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA RENEWAL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Bankruptcies_Additional_Notes__c</fullName>
        <label>Business Bankruptcies Additional Notes:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Bankruptcies__c</fullName>
        <label>Business Bankruptcies:</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Category__c</fullName>
        <inlineHelpText>If updated with new category, add similar to &quot;What type of Business is it?&quot; in UW Object.</inlineHelpText>
        <label>Business Category</label>
        <picklist>
            <picklistValues>
                <fullName>Antiques/Collectibles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appliance Stores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arrangements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Art Galleries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audio Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automobile Dealerships New/Used</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive - Body Repair, Collision, Painting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive - Brake and Muffler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive - General Repair, Truck, RV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive - Parts, Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive - Quick Sevice, Lube, Tune-Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive - Tire, Glass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive - Towing &amp; Emergency Road Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive - Transmission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barber Shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bicycle Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bicycles/Motorcycles Shops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bicycle Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boating/Marina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Book and Stationary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bowling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridal Shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Alarm Supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carpet Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Wash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check Cashing Companies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cigar Cigarette &amp; Tobacco Dealer-Retail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Info__c</fullName>
        <formula>&quot;Address:&quot;&amp; BR() 
&amp; Account.BillingStreet &amp; BR() 
&amp; Account.BillingCity &amp;&quot;, &quot;&amp; Account.BillingState &amp;&quot; &quot;&amp; Account.BillingPostalCode &amp; BR() &amp; BR() 
&amp; &quot;Business Phone: &quot;&amp; Account.Phone &amp; BR() 
&amp; &quot;Fax: &quot;&amp; Account.Fax &amp; BR() 
&amp; &quot;Email: &quot;&amp; Account.Email_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Information__c</fullName>
        <formula>&quot;Legal Name: &quot;&amp;  Account.Legal_Name__c &amp; BR() 
&amp; &quot;DBA Name: &quot;&amp;  Account.Name   &amp; BR() &amp; BR() 
&amp; &quot;Address:&quot;&amp; BR() 
&amp;  Account.BillingStreet  &amp; BR() 
&amp;  Account.BillingCity  &amp;&quot;, &quot;&amp;  Account.BillingState  &amp;&quot; &quot;&amp; Account.BillingPostalCode  &amp; BR() &amp; BR() 
&amp; &quot;Phone: &quot;&amp;  Account.Phone  &amp; BR() 
&amp; &quot;Fax: &quot;&amp; Account.Fax &amp; BR() 
&amp; &quot;Best Number to Call: &quot;&amp;  Best_Number_To_Call__c   &amp; BR()
&amp; &quot;Email: &quot;&amp;  Account.Email_Address__c  &amp; &quot; &quot;&amp; BR() &amp; BR()
&amp; &quot;Federal Tax ID: &quot; &amp; Account.FederalTaxID__c &amp; &quot; &quot; &amp; BR() &amp; BR()
&amp; &quot;Number of Businesses Included In Advance: &quot;&amp;   text(Account.Number_of_Locations__c)  &amp; BR() 
&amp; &quot;Number of Terminals at Location: &quot;&amp;   text( Account.Number_of_Terminals_at_Location__c )  &amp; BR() &amp; BR()
&amp; &quot;Business Open Date: &quot;&amp; text(Account.DateBusinessStarted__c)  &amp; BR() 
&amp; &quot;Owned Business Since: &quot;&amp; text(Account.Owned_Business_Since__c)  &amp; BR() &amp; BR() 
&amp; &quot;Does the Merchant Own the Building: &quot;&amp;  text(Account.Does_the_Merchant_Own_the_Building__c)  &amp; BR() 
&amp; &quot;Landlord/Agent Name: &quot;&amp;  Account.Landlord_Agent_Name__c &amp; BR() 
&amp; &quot;Landlord/Agent Phone: &quot;&amp;  Account.Landlord_Agent_Phone__c &amp; BR() 
&amp; &quot;Time Remaining on Site Lease/Mortgage: &quot;&amp;  Account.Time_Remaining_On_Lease__c  &amp; BR() &amp; BR() 
&amp; &quot;Federal or State Tax Liens?: &quot;&amp;  text(Account.Federal_or_State_Tax_Liens__c) &amp; BR()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Judgements__c</fullName>
        <label>Business Judgements</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$1-$25k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$25k-$50k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$50k-$75k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$75k and Above</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Name_On_Check_Reference__c</fullName>
        <label>Business Name On Check Reference</label>
        <picklist>
            <picklistValues>
                <fullName>Legal Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DBA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Not_In_Good_Standing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Not In Good Standing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Open_Date__c</fullName>
        <formula>Account.DateBusinessStarted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Updated From Account Business Open Date Field</inlineHelpText>
        <label>Business Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Open_Tax_Lien_Amount__c</fullName>
        <label>Lien Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Open_Tax_Lien_Payment_Plan__c</fullName>
        <label>Business Open Tax Lien Payment Plan</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Open_Tax_Lien_Type__c</fullName>
        <label>Business Open Tax Lien Type</label>
        <picklist>
            <picklistValues>
                <fullName>State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State &amp; Federal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Open_Tax_Liens__c</fullName>
        <label>Business Tax Liens Outstanding</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$1-$25k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$25k-$50k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$50k-$75k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$75k and Above</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Phone_Ext__c</fullName>
        <formula>Account.Phone_Ext__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Phone Ext</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Phone__c</fullName>
        <formula>HYPERLINK(&quot;javascript:sendCTIMessage(%27/CLICK_TO_DIAL?DN=&quot;&amp;Account.Phone&amp;&quot;&amp;ID=&amp;&quot;&amp; AccountId &amp;&quot;&amp;ENTITY_NAME=Account%27)&quot;,Account.Phone,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Status__c</fullName>
        <label>Business Status:</label>
        <picklist>
            <picklistValues>
                <fullName>Dissolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good Standing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not In good Standing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada Not Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delinquent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Tax_Lien_Date_Filed__c</fullName>
        <inlineHelpText>If entering a single date use the format: &quot;MM/DD/YYYY&quot;
If entering multiple dates use a semicolon &apos;;&apos; and a space &apos; &apos; to seperate the dates. E.G.: &quot;MM/DD/YYYY; MM/DD/YYYY; MM/DD/YYYY....&quot;</inlineHelpText>
        <label>Date(s) Lien Filed</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Tax_Lien_Filing_State_s__c</fullName>
        <inlineHelpText>If entering a single state use the abbreviation format: &quot;AK&quot; 
If entering multiple states use a semicolon &apos;;&apos; and a space &apos; &apos; to seperate the states. E.G.: &quot;AK; AL; AR....&quot;</inlineHelpText>
        <label>State(s)</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Voided_Check__c</fullName>
        <label>Business Voided Check</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA RENEWAL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_name_check_match_contract__c</fullName>
        <label>Business name on check match contract</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CALC_FICO__c</fullName>
        <description>FICO (or other) score uploaded by CALC after credit pull</description>
        <label>CALC FICO</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CALC_Link__c</fullName>
        <formula>HYPERLINK(&quot;https://calc.rapidadvance.com/calculator/opportunity?id=&quot;&amp;CASESAFEID(Id),&quot;CALC Link&quot;)</formula>
        <label>CALC Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CALC_Link_plaintext__c</fullName>
        <formula>&quot;https://calc.rapidadvance.com/calculator/opportunity?id=&quot;&amp;CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CALC Link (plaintext)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Business_Ownership_Confirmed__c</fullName>
        <label>Confirmed principal owner(s) in Westlaw?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable To Confirm</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CH_Character_Alert_Count__c</fullName>
        <formula>if(ispickval( CH_Suspect_Landlord_interview__c  , &quot;Yes&quot;), 1, 0) +
if(ispickval( CH_Unacceptable_Check__c , &quot;Yes&quot;), 1, 0) +
if(ispickval(  CH_Unsatisfactory_Neighborhood_Check__c  , &quot;Yes&quot;), 1, 0) +
if(ispickval( CH_Suspect_Merchant_interview__c  , &quot;YES&quot;), 1, 0) +
if(ispickval(  CH_Business_Ownership_Confirmed__c , &quot;No&quot;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Character Alert Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CH_Suspect_Landlord_interview__c</fullName>
        <label>Suspect Landlord interview</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CH_Suspect_Merchant_interview__c</fullName>
        <label>Suspect Merchant interview</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CH_Unacceptable_Check__c</fullName>
        <label>Unacceptable Check</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CH_Unsatisfactory_Neighborhood_Check__c</fullName>
        <label>Unsatisfactory Neighborhood Check</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRR</label>
        <referenceTo>Credit_Related_Reporting__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Calculate_Due_Dates__c</fullName>
        <label>Calculate Due Dates</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Calculator_Variance__c</fullName>
        <formula>1-( QC_Calculator_Average__c / AE_Calculator_Average__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculator Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Calculator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Calculator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Called_Confirmed_Add_l_Signer_Email__c</fullName>
        <label>Called Confirmed Add&apos;l Signer Email</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Called_Confirmed_Add_l_Signer_Number__c</fullName>
        <label>Called Confirmed Add&apos;l Signer Number</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Called_Confirmed_Contact_Email__c</fullName>
        <label>Called Confirmed Contact Email</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>